# alter

./: .buildinfo  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: action.yml
_sources/: intro.rst.txt
_sources/modules/: index.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
context/: instructions.xml  instructions2.xml  instructions3.xml
demos/: index.html
demos/demo/: index.html
docsrc/: conf.py  index.rst  intro.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
log/drafts/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
refs/: index.html
search/: index.html
src/phiarchitect/alter/: __init__.py  alter.py  app.py
todos/: index.html
usage/: index.html
